添加导航到菜单

--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -15,6 +15,11 @@
                    href="{{ index_url }}">首页<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mr-2">
+                {% url 'webstack:webstack_index' as webstack_index_url %}
+                <a class="nav-link py-md-3 {% if request.path == webstack_index_url %}active{% endif %}"
+                   href="{{ webstack_index_url }}">导航</a>
+            </li>
+            <li class="nav-item mr-2">
                 {% url 'blog:subject_index' as subject_index_url %}
                 <a class="nav-link py-md-3 {% if request.path == subject_index_url %}active{% endif %}"
                    href="{{ subject_index_url }}">专题</a>
