--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -12,7 +12,7 @@
 {% block logo %}
     <div class="logo">
         <a href="{% url 'webstack:webstack_index' %}" class="logo-expanded">
-            <img src="{% static 'webstack/assets/images/logo@2x.png' %}" width="100%" alt=""/>
+            <img src="{% static 'blog/img/nav-log.png' %}" width="100%" alt=""/>
         </a>
         <a href="{% url 'webstack:webstack_index' %}" class="logo-collapsed">
             <img src="{% static 'webstack/assets/images/logo-collapsed@2x.png' %}" width="40" alt=""/>
