添加导航到菜单

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -12,10 +12,10 @@
 {% block logo %}
     <div class="logo">
         <a href="{% url 'webstack:webstack_index' %}" class="logo-expanded">
-            <img src="{% static 'blog/img/nav-log.png' %}" width="100%" alt=""/>
+            <img src="{% static 'blog/img/nav-logo.png' %}" height="40" alt=""/>
         </a>
         <a href="{% url 'webstack:webstack_index' %}" class="logo-collapsed">
-            <img src="{% static 'webstack/assets/images/logo-collapsed@2x.png' %}" width="40" alt=""/>
+            <img src="{% static 'webstack/assets/images/logo-collapsed@2x.png' %}" height="40" alt=""/>
         </a>
     </div>
 {% endblock %}
