添加导航到菜单

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -9,10 +9,18 @@
 
 {% block top-file %}
     <style>
+        .sidebar-menu .main-menu a {
+            padding: 14px 4px;
+        }
+
         .sidebar-menu .main-menu a > i {
-            margin-right: 0.8rem;
-            max-width: 1.2rem;
-            max-height: 1.2rem;
+            margin-right: 8px;
+            width: 18px;
+            max-height: 18px;
+        }
+
+        .sidebar-menu .main-menu ul li a {
+            padding-left: 34px;
         }
     </style>
 {% endblock %}
