添加导航到菜单

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -1,10 +1,12 @@
 {% extends 'webstack/base.html' %}
 {% load static %}
 
-{% block title %}我的导航网站{% endblock %}
+{% block title %}程序员网址导航_TendCode{% endblock %}
 
 {% block meta %}
     <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" type="image/x-icon"/>
+    <meta name="keywords" content="程序员网址导航,网址收藏,tendcode.com">
+    <meta name="description" content="程序员常用网址导航聚合站">
 {% endblock %}
 
 {% block top-file %}
