添加导航到菜单

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -9,23 +9,7 @@
     <meta name="description" content="程序员常用网址导航聚合站">
 {% endblock %}
 
-{% block top-file %}
-    <style>
-        .sidebar-menu .main-menu a {
-            padding: 14px 4px;
-        }
-
-        .sidebar-menu .main-menu a > i {
-            margin-right: 8px;
-            width: 18px;
-            max-height: 18px;
-        }
-
-        .sidebar-menu .main-menu ul li a {
-            padding-left: 34px;
-        }
-    </style>
-{% endblock %}
+{% block top-file %}{% endblock %}
 
 {% block logo %}
     <div class="logo">
