--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block navbar-list %}
-    <li style="min-height: 75px;"><a href="{% url 'blog:index' %}">首页</a></li>
+    <li style="min-height: 75px;"><a href="{% url 'blog:index' %}">博客首页</a></li>
     <li style="min-height: 75px;"><a href="{% url 'blog:subject_index' %}">博客专题</a></li>
     <li style="min-height: 75px;"><a href="{% url 'tool:total' %}">在线工具</a></li>
     <li style="min-height: 75px;"><a href="{% url 'blog:about' %}">关于</a></li>
