添加导航到菜单

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -41,5 +41,6 @@
         <a href="https://github.com/Hopetree" target="_blank">
             <strong>Hopetree</strong>
         </a>
+        <a href="{% url 'blog:friend' %}" style="margin-left: 1rem;">友情链接</a>
     </div>
 {% endblock %}
