--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -6,6 +6,22 @@
 {% block metas %}
     <meta name="description" content="{{ article.summary }}">
     <meta name="keywords" content="{% keywords_to_str article %}">
+    {#SEO优化#}
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:site_name" content="Tend to Code_一个使用django和bootstrap搭建的个人博客_{{ site_end_title }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ article.title }}_{{ article.category }}" />
+    <meta property="og:url" content="{{ site_url }}{{ article.get_absolute_url }}" />
+    <meta property="og:image" content="{{ site_url }}{{ article.img_link.url }}" />
+    <meta property="og:image:secure_url" content="{{ site_url }}{{ article.img_link.url }}" />
+    <meta property="og:image:width" content="250" />
+    <meta property="og:image:height" content="150" />
+    <meta property="article:published_time" content="{{ article.create_date | date:"Y-m-d" }}T{{ article.create_date | time:"H:i:s" }}+00:00" />
+    <meta property="article:modified_time" content="{{ article.update_date | date:"Y-m-d" }}T{{ article.update_date | time:"H:i:s" }}+00:00" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="{{ article.title }}_{{ article.category }}" />
+    <meta name="twitter:image" content="{{ site_url }}{{ article.img_link.url }}" />
+    {#SEO优化#}
 {% endblock %}
 
 
