--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -15,6 +15,10 @@
             .page-container .main-content {
                 padding: 10px;
             }
+
+            .user-info-navbar .user-info-menu {
+                padding: 0 10px;
+            }
         }
 
         @media (min-width: 768px) {
