--- a/apps/blog/static/blog/css/night.css
+++ b/apps/blog/static/blog/css/night.css
@@ -244,6 +244,10 @@ pre {
     color: #ea6f5a;
 }
 
+#no-editor {
+    background-color: #18222d;
+}
+
 /*全局样式参数start*/
 .dark-theme, body {
     --izone-layer-golden-1: rgba(209, 171, 97, 0.23);
