导航添加图标

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -46,7 +46,7 @@
     <li style="min-height: 75px;"><a href="{% url 'blog:subject_index' %}">
         <i class="fa fa-cubes" style="margin-right: .5rem;"></i>博客专题</a></li>
     <li style="min-height: 75px;"><a href="{% url 'tool:total' %}">
-        <i class="fa fa-briefcase" style="margin-right: .5rem;"></i>在线工具</a></li>
+        <i class="fa fa-balance-scale" style="margin-right: .5rem;"></i>在线工具</a></li>
     <li style="min-height: 75px;"><a href="{% url 'blog:about' %}">
         <i class="fa fa-leaf" style="margin-right: .5rem;"></i>关于</a></li>
 {% endblock %}
