--- a/templates/search/blog/search.html
+++ b/templates/search/blog/search.html
@@ -24,7 +24,7 @@
                             <div class="article-block">
                                 <div class="media mb-1 mb-sm-2 p-2 p-lg-3">
                                     <div class="align-self-center rounded-6 mr-2 mr-lg-3 w-25 modal-open">
-                                        <a href="{{ article.object.get_absolute_url }}" target="_blank">
+                                        <a href="{{ article.object.get_absolute_url }}">
                                             <img class="w-100 article-img" src="{{ article.object.img_link.url }}"
                                                  alt="{{ article.object.title }}">
                                         </a>
@@ -37,7 +37,7 @@
                                                 {{ article.object.create_date|naturaltime }}</span>
                                         </div>
                                         <h2 class="mt-0 font-weight-bold text-info f-17">
-                                            <a href="{{ article.object.get_absolute_url }}" target="_blank">
+                                            <a href="{{ article.object.get_absolute_url }}">
                                                 {% my_highlight article.object.title query %}</a>
                                         </h2>
                                         {% with article.object.body_to_markdown|safe as this_body %}
@@ -50,7 +50,6 @@
                                                 <i class="fa fa-book mr-1"></i>{{ article.object.category }}</a>
                                             <span><i class="fa fa-eye ml-2 mr-1"></i>{{ article.object.views }}</span>
                                             <a href="{{ article.object.get_absolute_url }}#comment-block"
-                                               target="_blank"
                                                title="查看文章评论">
                                                 <i class="fa fa-comments ml-2 mr-1"></i>{% get_comment_count article.object %}
                                             </a>
