--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -27,7 +27,7 @@
 
                 // 指定图表的配置项和数据
                 option = {
-                    title: {text: '文章访问量趋势图'},
+                    title: {text: '文章阅读量趋势图'},
                     legend: {data: ['本周访问量', '上周访问量']},
                     dataset: {
                         source: myData
