新增模型：文章浏览量统计

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -27,6 +27,13 @@
 
                 // 指定图表的配置项和数据
                 option = {
+                    toolbox: {
+                        show: true,
+                        feature: {
+                            magicType: {type: ['line', 'bar']},
+                            saveAsImage: {}
+                        }
+                    },
                     title: {
                         text: '文章两周阅读量趋势图',
                         x: 'center',
