--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -17,13 +17,13 @@
 {% block base_content %}
     <div class="container">
         <div class="row justify-content-center">
-            <div id="views_box" style="width: 100%;height:560px;"></div>
-            {% get_views_data_from_redis as views_data %}
-            <div id="views_data" style="display: none;">{{ views_data|json_script:"views_data" }}</div>
+            <div class="mb-3" id="day_views_box" style="width: 100%;height:340px;"></div>
+            {% get_views_data_from_redis as day_views_data %}
+            <div id="day_views_data" style="display: none;">{{ day_views_data|json_script:"day_views_data" }}</div>
             <script type="text/javascript">
                 // 基于准备好的dom，初始化echarts实例
-                const myData = JSON.parse(document.getElementById("views_data").textContent);
-                const myChart = echarts.init(document.getElementById('views_box'));
+                const myDayViewsData = JSON.parse(document.getElementById("day_views_data").textContent);
+                const myDayViewsChart = echarts.init(document.getElementById('day_views_box'));
 
                 // 指定图表的配置项和数据
                 option = {
@@ -42,7 +42,7 @@
                     },
                     legend: {data: ['本周阅读量', '上周阅读量']},
                     dataset: {
-                        source: myData
+                        source: myDayViewsData
                     },
                     xAxis: {type: 'category'},
                     yAxis: {type: 'value'},
@@ -71,7 +71,67 @@
                 };
 
                 // 使用刚指定的配置项和数据显示图表。
-                myChart.setOption(option);
+                myDayViewsChart.setOption(option);
+            </script>
+        </div>
+        <div class="row justify-content-center">
+            <div class="mb-3" id="hours_views_box" style="width: 100%;height:340px;"></div>
+            {% get_hours_views_from_redis as hours_views_data %}
+            <div id="hours_views_data"
+                 style="display: none;">{{ hours_views_data|json_script:"hours_views_data" }}</div>
+            <script type="text/javascript">
+                // 基于准备好的dom，初始化echarts实例
+                const myHoursViewData = JSON.parse(document.getElementById("hours_views_data").textContent);
+                const myHoursViewChart = echarts.init(document.getElementById('hours_views_box'));
+
+                // 指定图表的配置项和数据
+                option = {
+                    color: ['#fc8452', '#9a60b4', '#ea7ccc', '#5470c6', '#91cc75', '#fac858', '#ee6666', '#73c0de', '#3ba272'],
+                    toolbox: {
+                        show: true,
+                        feature: {
+                            magicType: {type: ['line', 'bar']},
+                            saveAsImage: {}
+                        }
+                    },
+                    title: {
+                        text: '文章两天阅读量趋势图',
+                        x: 'center',
+                        y: 'bottom',
+                        textStyle: {fontSize: 18}
+                    },
+                    legend: {data: ['今天每小时阅读量', '昨天每小时阅读量']},
+                    dataset: {
+                        source: myHoursViewData
+                    },
+                    xAxis: {type: 'category'},
+                    yAxis: {type: 'value'},
+                    series: [
+                        {
+                            type: 'bar',
+                            label: {
+                                show: true,
+                                position: 'top',
+                                textStyle: {
+                                    fontSize: 12
+                                }
+                            }
+                        },
+                        {
+                            type: 'bar',
+                            label: {
+                                show: true,
+                                position: 'bottom',
+                                textStyle: {
+                                    fontSize: 12
+                                }
+                            }
+                        }
+                    ]
+                };
+
+                // 使用刚指定的配置项和数据显示图表。
+                myHoursViewChart.setOption(option);
             </script>
         </div>
     </div>
