添加每小时阅读量趋势图

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -61,7 +61,7 @@
                             type: 'line',
                             label: {
                                 show: true,
-                                position: 'bottom',
+                                position: 'top',
                                 textStyle: {
                                     fontSize: 12
                                 }
@@ -121,7 +121,7 @@
                             type: 'bar',
                             label: {
                                 show: true,
-                                position: 'bottom',
+                                position: 'top',
                                 textStyle: {
                                     fontSize: 12
                                 }
