--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="mb-3" id="day_views_box" style="width: 100%;height:340px;"></div>
-            {% get_views_data_from_redis '本周阅读量' '上周阅读量' as day_views_data %}
+            {% get_views_data_from_redis '本周阅读量' '上周阅读量' '今日预测' as day_views_data %}
             <div id="day_views_data" style="display: none;">{{ day_views_data|json_script:"day_views_data" }}</div>
             <script type="text/javascript">
                 // 基于准备好的dom，初始化echarts实例
@@ -40,13 +40,23 @@
                         y: 'bottom',
                         textStyle: {fontSize: 18}
                     },
-                    legend: {data: ['本周阅读量', '上周阅读量']},
+                    legend: {data: ['本周阅读量', '上周阅读量', '今日预测']},
                     dataset: {
                         source: myDayViewsData
                     },
                     xAxis: {type: 'category'},
                     yAxis: {type: 'value'},
                     series: [
+                        {
+                            type: 'line',
+                            label: {
+                                show: true,
+                                position: 'top',
+                                textStyle: {
+                                    fontSize: 12
+                                }
+                            }
+                        },
                         {
                             type: 'line',
                             label: {
