--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="mb-3" id="day_views_box" style="width: 100%;height:340px;"></div>
-            {% get_views_data_from_redis '本周阅读量' '上周阅读量' '今日预测' as day_views_data %}
+            {% get_views_data_from_redis as day_views_data %}
             <div id="day_views_data" style="display: none;">{{ day_views_data|json_script:"day_views_data" }}</div>
             <script type="text/javascript">
                 // 基于准备好的dom，初始化echarts实例
@@ -42,7 +42,7 @@
                     },
                     legend: {data: ['本周阅读量', '上周阅读量', '今日预测']},
                     dataset: {
-                        source: myDayViewsData
+                        source: [['product', '本周阅读量', '上周阅读量', '今日预测']].concat(myDayViewsData)
                     },
                     xAxis: {type: 'category'},
                     yAxis: {type: 'value'},
@@ -86,7 +86,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="mb-3" id="hours_views_box" style="width: 100%;height:340px;"></div>
-            {% get_hours_views_from_redis '今天每小时阅读量' '昨天每小时阅读量' as hours_views_data %}
+            {% get_hours_views_from_redis as hours_views_data %}
             <div id="hours_views_data"
                  style="display: none;">{{ hours_views_data|json_script:"hours_views_data" }}</div>
             <script type="text/javascript">
@@ -112,7 +112,7 @@
                     },
                     legend: {data: ['今天每小时阅读量', '昨天每小时阅读量']},
                     dataset: {
-                        source: myHoursViewData
+                        source: [['product', '今天每小时阅读量', '昨天每小时阅读量']].concat(myHoursViewData)
                     },
                     xAxis: {type: 'category'},
                     yAxis: {type: 'value'},
